# crewai-projects

code_builder/: README.md  pyproject.toml
code_builder/src/code_builder/: crew.py  main.py
code_builder/src/code_builder/config/: agents.yaml  tasks.yaml
code_builder/src/code_builder/tools/: custom_tool.py
