[project]
name = "code_builder"
version = "0.1.0"
description = "code_builder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
code_builder = "code_builder.main:run"
run_crew = "code_builder.main:run"
train = "code_builder.main:train"
replay = "code_builder.main:replay"
test = "code_builder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
